docs/babies.css
html {
  background: url(nursery.png) no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    /* opacity: 0.5; */

  
  

  background-color: #f7f7f0;
  color: black;  font-family: Verdana, sans-serif;}
  
    

  h1 {text-align: center;}
  p {text-align: center;}
  div {text-align: center;
    margin-bottom: 10px;}


  
.arrow {
  border: solid #D3E788;
  border-width: 0 3px 3px 0;
  display: inline-block;
  padding: 3px;
}

.right {
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
}

a {
  text-decoration: none;
  display: inline-block;
  padding: 2px 8px;
}

button:hover {
  background-color: #cae0ad;
  color: black;
}

button {

	border-radius:15px;
	border:1px solid #18ab29;
	display:inline-block;
	cursor:pointer;
	font-size:14px;
	padding:5px 15px;
	text-decoration:none;
  background-color: #D4B483;
  color: #251605;
  border:1px solid #b56d07;
}


button:focus{
  background-color : #D4B483;
}

.button-stay:focus {
  background-color : black;
  color: #cae0ad;
}

.slider {
  width: 100%;
  height: 14px;
  margin-left: auto;
  margin-right: auto;
  cursor: pointer;
  border-radius: 14px;
  border: 0px solid #000000;
  -webkit-text-fill-color:green;
}


input {
  text-align: center;
  border:1px solid #b56d07;
  }

#chart {
  margin-left : 10%;
}


img {
  opacity: 0.5;
}

.textinpanel {
  margin: auto;
  width : 60%;
  text-align: center;
}

.panel{
  /* background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(rgb(212, 180, 131),1)); */
  background-image:radial-gradient(rgba(212, 180, 131, 1), rgba(255,0,0,0));
  /* background-color:; */
  border-radius:15px;
  opacity:1;
  width : 100%;
  margin: auto;
  margin-bottom: 5px;
  padding: 5px 5px;
}

#yearval {
  display: inline-block;
  border-radius:20px;
  background-color: #D4B483;
  padding: 10px;
  color: #251605;
  border:1px solid #b56d07;
  font-size: large;
  font-weight: bold;
}

#num-bars-value {
  display: inline-block;
  font-size:14px;
}

datalist{
  /* background-image:radial-gradient(rgba(212, 180, 131, 1), rgba(255,0,0,0)); */
  /* display: list-item; */
  /* height:30px; */
  /* visibility: visible; */
  /* width: 40px;
  height: 40px; */
  /* width: 10%;  */
  /* font-size: 100px; */
} 

#label{
  margin: auto;
  padding:10px;
  margin-bottom: 5px;
  background-image:radial-gradient(rgba(212, 180, 131, 1), rgba(255,0,0,0));
  display:flex;
  width:100%;
  justify-content: space-between;
}

.bottom {
  position: fixed;
  bottom: 0;
  text-align: right;
  width: 98%;
}

